--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ function setup() {
   background(200);
   
   // Создаем элементы управления
-  let buttonStyle = 'padding:10px; font-family:monospace; background:white; border:1px solid black; width:120px; text-align:left;';
-  let selectStyle = 'padding:10px; padding-right:30px; font-family:monospace; background:white; border:1px solid black; width:120px; text-align:left; appearance:menulist; -webkit-appearance:menulist;';
+  let buttonStyle = 'padding:10px; font-family:monospace; background:white; border:1px solid black; width:120px; text-align:left; border-radius:0;';
+  let selectStyle = 'padding:10px; padding-right:30px; font-family:monospace; background:white; border:1px solid black; width:120px; text-align:left; appearance:menulist; -webkit-appearance:menulist; border-radius:0;';
   
   // Выпадающий список для выбора режима
   modeSelect = createSelect();
